syntax = "proto3";

option go_package = "github.com/nazarslota/unotes/auth/api/proto";

import "oauth2.signup.proto";
import "oauth2.signin.proto";
import "oauth2.signout.proto";
import "oauth2.refresh.proto";

service OAuth2Service {
  rpc SignUp(SignUpRequest) returns (SignUpResponse);
  rpc SignIn(SignInRequest) returns (SignInResponse);
  rpc SignOut(SignOutRequest) returns (SignOutResponse);
  rpc Refresh(RefreshRequest) returns (RefreshResponse);
}
